[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/freegui/png/level_complete2.png" type="Texture" id=1]
[ext_resource path="res://assets/buttons/g1657-9.png" type="Texture" id=2]
[ext_resource path="res://assets/bradbunr.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://LevelFinish.gd" type="Script" id=4]
[ext_resource path="res://LevelSelect.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/buttons/g2181-6.png" type="Texture" id=6]
[ext_resource path="res://assets/buttons/g7941-8.png" type="Texture" id=7]
[ext_resource path="res://assets/buttons/g6449-3.png" type="Texture" id=8]
[ext_resource path="res://assets/buttons/g2719-6.png" type="Texture" id=9]
[ext_resource path="res://assets/buttons/g1119-0.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
size = 128
outline_size = 8
outline_color = Color( 0.537255, 0.360784, 0.223529, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_char = 12
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 128
outline_size = 8
outline_color = Color( 0.537255, 0.360784, 0.223529, 1 )
use_filter = true
extra_spacing_char = 12
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 128
outline_size = 8
outline_color = Color( 0.537255, 0.360784, 0.223529, 1 )
use_filter = true
extra_spacing_char = 14
font_data = ExtResource( 3 )

[node name="Control" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="ColorRect" type="Control" parent="."]
visible = false
margin_left = -882.498
margin_top = -538.673
margin_right = -882.498
margin_bottom = -538.673
rect_pivot_offset = Vector2( -0.0145483, -0.0359873 )
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="ColorRect"]
visible = false
mouse_filter = 2
color = Color( 0.121569, 0.117647, 0.117647, 0.603922 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelFinish" type="Popup" parent="."]
visible = true
grow_horizontal = 2
grow_vertical = 2
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="LevelFinish"]
margin_left = -393.241
margin_top = -586.777
margin_right = 406.759
margin_bottom = 553.223
texture = ExtResource( 1 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelSelect" type="TouchScreenButton" parent="LevelFinish"]
position = Vector2( -324.371, 373.417 )
normal = ExtResource( 10 )
pressed = ExtResource( 6 )

[node name="TotalStar" type="RichTextLabel" parent="LevelFinish"]
margin_left = 92.4651
margin_top = -258.386
margin_right = 392.465
margin_bottom = -58.3858
rect_clip_content = false
custom_fonts/normal_font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="TouchScreenButton" parent="LevelFinish"]
position = Vector2( 111.716, 373.417 )
normal = ExtResource( 2 )
pressed = ExtResource( 9 )
__meta__ = {
"_editor_description_": ""
}

[node name="Restart" type="TouchScreenButton" parent="LevelFinish"]
position = Vector2( -97.976, 373.417 )
normal = ExtResource( 8 )
pressed = ExtResource( 7 )
__meta__ = {
"_editor_description_": ""
}

[node name="finish_time" type="RichTextLabel" parent="LevelFinish"]
margin_left = 106.496
margin_top = -54.1769
margin_right = 430.496
margin_bottom = 97.8231
rect_clip_content = false
custom_fonts/normal_font = SubResource( 2 )
text = "00"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="money" type="RichTextLabel" parent="LevelFinish"]
margin_left = 111.053
margin_top = 133.894
margin_right = 352.053
margin_bottom = 297.894
rect_clip_content = false
custom_fonts/normal_font = SubResource( 3 )
text = "00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node" parent="." instance=ExtResource( 5 )]
visible = false

[node name="MoneyCount" type="Timer" parent="."]
wait_time = 0.02
[connection signal="pressed" from="LevelFinish/LevelSelect" to="." method="_on_LevelSelect_pressed"]
[connection signal="pressed" from="LevelFinish/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="LevelFinish/Restart" to="." method="_on_Restart_pressed"]
[connection signal="timeout" from="MoneyCount" to="." method="_on_MoneyCount_timeout"]
